--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,2 +1,154 @@
+@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
+
+:root {
+	--yellow-400: #e0af68;
+	--orange-400: #ff9e64;
+	--cyan-400: #7dcfff;
+	--teal-500: #1abc9c;
+	--green-400: #9ece6a;
+
+	--aquamarine-400: #73daca;
+	--aquamarine-600: #41a6b5;
+
+	--lilac-400: #8d7cd8;
+	--lilac-600: #9d7cd8;
+
+	--gray-100: #c0caf5;
+	--gray-200: #a9b1d6;
+	--gray-900: #16161e;
+	--gray-950: #0c0e14;
+
+	--blue-400: #7aa2f7;
+	--blue-600: #3d59a1;
+	--blue-700: #394b70;
+}
+
+:root {
+	--color-background: var(--gray-950);
+	--color-foreground: var(--gray-100);
+	--color-highlight: var(--gray-100);
+	--color-foreground-highligted: var(--gray-950);
+
+	--color-muted: var(--gray-900);
+
+	--color-primary: var(--green-400);
+	--color-secondary: var(--orange-400);
+	--color-secondary-hover: var(var(--yellow-400));
+	--color-accent: var(--lilac-400);
+	--color-accent-hover: var(--liliac-600);
+}
+
+@theme {
+	--font-roboto: 'Roboto Mono', monospace;
+	--font-doto: 'Doto', monospace;
+
+	/* Backgrounds */
+	--color-background: var(--color-background);
+
+	/* Foregrounds */
+	--color-foreground: var(--color-foreground);
+
+	/* Highlights  */
+	--color-highlight: var(--color-highlight);
+	--color-foreground-highlighted: var(--color-foreground-highlighted);
+
+	/* Muted */
+	--color-muted: var(--color-muted);
+
+	--color-primary: var(--color-primary);
+	--color-secondary: var(--color-econdary);
+	--color-accent: var(--color-accent);
+}
+@layer utilities {
+	@keyframes blink {
+		0%,
+		50%,
+		100% {
+			opacity: 1;
+		}
+		25%,
+		75% {
+			opacity: 0;
+		}
+	}
+
+	.animate-blink {
+		animation: blink 1s step-start infinite;
+	}
+}
+
+@utility section {
+	@apply min-h-30 border border-muted bg-background text-foreground;
+}
+
+@utility background-dots {
+	@apply bg-fixed;
+	background-image: radial-gradient(circle, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+	background-size: 20px 20px;
+}
+
+@utility background-lines {
+	@apply bg-fixed;
+	background-image: repeating-linear-gradient(
+		315deg,
+		rgba(255, 255, 255, 0.06) 0px,
+		rgba(255, 255, 255, 0.06) 1px,
+		rgba(255, 255, 255, 0.02) 2px,
+		transparent 1px,
+		transparent 10px
+	);
+}
+
+html {
+	@apply font-roboto;
+}
+
+body {
+	background: var(--color-background);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 100dvh;
+}
+
+body:before {
+	content: '';
+	transform-style: flat;
+	pointer-events: none;
+	z-index: -1;
+	width: 100vw;
+	height: 100dvh;
+	position: fixed;
+	top: 0px;
+	background-image: radial-gradient(circle, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
+	background-size: 20px 20px;
+	mask: linear-gradient(125deg, white 0%, transparent 20%, transparent 50%, white 80%, white 100%);
+}
+
+body::after {
+	content: '';
+	pointer-events: none;
+	z-index: -1;
+	width: 100vw;
+	height: 100dvh;
+	position: fixed;
+	top: 0;
+	left: 0;
+
+	background-image: radial-gradient(circle, rgba(255, 255, 255, 0.5) 1px, transparent 1px);
+	background-size: 20px 20px;
+
+	/* Mouse-driven glow */
+	mask: radial-gradient(
+		180px circle at var(--mx, 50%) var(--my, 50%),
+		white 0%,
+		rgba(255, 255, 255, 0.8) 30%,
+		rgba(255, 255, 255, 0.3) 50%,
+		transparent 70%
+	);
+
+	transition: mask 0.05s linear;
+}
